--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <body>
     <div id="container">
       <header>
-        <h1>Welcome to Physics in Desmos</h1>
+        <h1>Welcome to Physics with Desmos</h1>
         <section id="intro">
-          <p>Project - High school physics in Desmos</p>
+          <p>Project - High school physics with Desmos</p>
           <p>Author - LeeFlower</p>
           <p>Email - <a href="mailto:fengtang1222@foxmail.com">here</a></p>
         </section>
@@ -29,6 +29,27 @@
           <ul id="mechanics">
             <li>
               <a href="./categories/mechanics/gravity.html">Gravity</a>
+            </li>
+            <li>
+              <a href="./categories/mechanics/elasticity.html">Elasticity</a>
+            </li>
+            <li>
+              <a href="./categories/mechanics/friction.html">Friction</a>
+            </li>
+            <li>
+              <a href="./categories/mechanics/newton_third_law.html">Newton's Third Law</a>
+            </li>
+            <li>
+              <a href="./categories/mechanics/force.html">Compositon and Decomposition of Forces</a>
+            </li>
+            <li>
+              <a href="./categories/mechanics/force2.html">Equilibrium of Concurrent Forces</a>
+            </li>
+            <li>
+              <a href="./categories/mechanics/newton_first_law.html">Newton's First Law</a>
+            </li>
+            <li>
+              <a href="./categories/mechanics/newton_second_law.html">Newton's Second Law</a>
             </li>
           </ul>
           <h3>Thermology</h3>
@@ -42,6 +63,7 @@
         </nav>
       </aside>
       <main>
+        <div id="content"></div>
       </main>
       <footer>
         <p>Powered by Desmos</p>
